# wireguard-web-autopeer

./: Cargo.toml  README.md  build.rs  build.sh  mock_server.py  wireguard-web-autopeer.rc
resources/: wireguard-web-autopeer.service
src/: autorefresh.rs  http.rs  ip_net.rs  main.rs  monitor.rs  network_interface.rs  storage.rs  wireguard.rs  wireguard_old.rs
src/http/: mod.rs  peering.rs
src/network/: mod.rs  monitor.rs  utils.rs
src/state/: messages.rs  mod.rs  structs.rs
src/tray/: linux.rs  macos.rs  mod.rs  windows.rs
src/wireguard/: information.rs
