[package]
name = "wireguard-web-autopeer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default-net = "0.14.1"
env_logger = "0.10.0"
futures = "0.3.28"
if-watch = { version = "3.0.1", features = ["smol"] }
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
smol = "1.3.0"
tray-item = "0.7.1"
wireguard-control = "1.5.0"

[target.'cfg(unix)'.dependencies]
gtk = "0.15"

[target.'cfg(windows)'.build-dependencies]
windres = "*"
