[package]
name = "wireguard-web-autopeer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
env_logger = "0.10.0"
futures = "0.3.28"
if-watch = { version = "3.0.1", features = ["tokio"] }
log = "0.4.17"
net-route = "0.2.5"
network-interface = "1.0.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
wireguard-uapi = "3.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "*"
tray-item = "0.7.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
tray-item = "0.7.1"
